Aula em andamento

--- a/imagens/index.html
+++ b/imagens/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <header class="layout-cabecalho">
+    <header class="layout-cabecalho layout-cabecalho--home">
         <!--Foi criado um container para deixar organizdos os itens e não ocorrer uma distorção dependendo da qualidade da tela do usuário-->
         <div class="container">
             <img src="logo02_projeto.png"   width="80" alt="MyPilas">
@@ -48,6 +48,21 @@
 
 
     </section>
+
+    <div class="layout-depoimento">
+        <div class="container">
+        <div class="depoimento">
+            <blockquote>Eu tinha perdido totalmente o controle da minha empresa. Depois que comecei a usar o MyPilas, me sinto muito mais organizado e confiante de tudo.</blockquote>
+
+            <div class="depoimento__autor">
+                <img src="homem.jpg" width="180px" height="180px" alt="Imagem de homem">
+                <p>João da Silva</p>
+
+            </div>
+        </div>    
+
+        </div>
+    </div>
         
         <!--Como já estava determinado no CSS a medida da DIV container de 1200px, apenas inseri novamente a mesma div do header-->
         <div class="container">
@@ -120,6 +135,14 @@
 
             </div>
         </div>
+
+    <footer class="layout-rodape">
+        <div class="container">
+            <p>&copy; MyPilas. Todos os direitos reservados</p>
+
+        </div>
+
+    </footer>
         
 </body>
 
