Ajustando espaçamentos das caixas

--- a/imagens/index.html
+++ b/imagens/index.html
@@ -93,7 +93,7 @@
                         </article>
                     </div>
                     <div class="col-md-4">    
-                        <article class="plano">
+                        <article class="plano plano--mais-popular">
                             <h2 class="plano__cabecalho">Micro</h2>
                             <div class="plano__preco">R$89/mês</div>
                             <ul class="plano__caracteristicas">
@@ -111,7 +111,7 @@
 
                         </article>
                     </div>
-                    <div class="col-md-4">    
+                    <div class="col-md-4 ultima-coluna"> <!--Classe ultima-coluna criada para utilizar no CSS e não deixar o espaço muito grande até o rodapé-->   
                         <article class="plano">
                             <h2 class="plano__cabecalho">Pequena</h2>
                             <div class="plano__preco">R$99/mês</div>
