--- a/imagens/index.html
+++ b/imagens/index.html
@@ -22,7 +22,14 @@
     <header class="layout-cabecalho layout-cabecalho--home">
         <!--Foi criado um container para deixar organizdos os itens e não ocorrer uma distorção dependendo da qualidade da tela do usuário-->
         <div class="container">
-            <img src="logo02_projeto.png"   width="80" alt="MyPilas">
+
+            <nav class="navegacao">
+                <img src="logo02_projeto.png"       width="80" alt="MyPilas">
+
+                <div class="navegacao__menu">
+                    Botão
+                </div>
+            </nav>
         </div>
 
     </header>
