Trabalhando com o menu

--- a/imagens/index.html
+++ b/imagens/index.html
@@ -27,7 +27,15 @@
                 <img src="logo02_projeto.png"       width="80" alt="MyPilas">
 
                 <div class="navegacao__menu">
-                    Botão
+                    <button class="botao-chaveador"></button>
+                    <ul class="menu">
+                        <li class="menu__item"><a href="#">Como funciona</a></li>
+                        <li class="menu__item"><a href="#planos">Planos e preços</a></li>
+                        <li class="menu__item"><a href="#">Contato</a></li>
+                        <li class="menu__item menu__item--botao"><a href="#" class="botao botao--login">Login</a></li>
+
+
+                    </ul>
                 </div>
             </nav>
         </div>
