--- a/imagens/index.html
+++ b/imagens/index.html
@@ -27,8 +27,8 @@
                 <img src="logo02_projeto.png"       width="80" alt="MyPilas">
 
                 <div class="navegacao__menu">
-                    <button class="botao-chaveador"></button>
-                    <ul class="menu">
+                    <button class="botao-chaveador js-botao-chaveador"></button>
+                    <ul class="menu js-menu">
                         <li class="menu__item"><a href="#">Como funciona</a></li>
                         <li class="menu__item"><a href="#planos">Planos e preços</a></li>
                         <li class="menu__item"><a href="#">Contato</a></li>
@@ -158,6 +158,9 @@
         </div>
 
     </footer>
+
+    <script src="javascripts/app.js"></script>
+
         
 </body>
 
