--- a/imagens/index.html
+++ b/imagens/index.html
@@ -28,7 +28,7 @@
 
                 <div class="navegacao__menu">
                     <button class="botao-chaveador js-botao-chaveador"></button>
-                    <ul class="menu js-menu">
+                    <ul class="menu menu--exibindo js-menu">
                         <li class="menu__item"><a href="#">Como funciona</a></li>
                         <li class="menu__item"><a href="#planos">Planos e preços</a></li>
                         <li class="menu__item"><a href="#">Contato</a></li>
